# baretools-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/instructions/: baretools-conventions.instructions.md
.github/workflows/: ci.yml  pages.yml  pr-title.yml  release.yml  testpypi.yml
docs/: _config.yml  api-reference.md  changelog.md  concepts.md  getting-started.md  index.md  providers.md  roadmap.md  why-baretools.md
examples/: anthropic_agent.py  gemini_agent.py  openai_agent.py  requirements.examples.txt
src/baretools/: __init__.py  core.py
tests/: test_core.py
