[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baretools-ai"
version = "0.1.0"
description = "Minimal tooling primitives for LLM tool calling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Baretools AI Contributors" }]
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.uv]
required-version = ">=0.7.0"
